--- a/main.html
+++ b/main.html
@@ -27,9 +27,7 @@
 <nav class="navbar">
       <ul class="navbar__menu">
         <li><a href="./main.php">Home</a></li>
-        <li><a href="./diet_list.php" >DIET LIST</a></li>
-        <li><a href="./exercise_list.php">EXERCISE LIST</a></li>
-       <li><a href="../sale/sale.php">IN BODY</a></li>
+        <li><a href="./diet_list.php" >장바구니</a></li>
      </ul>
 </nav>
 <!-- main -->
