--- a/s.html
+++ b/s.html
@@ -1,41 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="EUC-KR">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        /* ½ºÅ¸ÀÏ¸µÀ» À§ÇÑ CSS */
-        .container {
-            width: 1000px;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: flex-start;
-        }
-
-        .box {
-            width: 200px;
-            height: 300px;
-            margin: 10px;
-            background-color: lightblue;
-        }
-    </style>
-    <title>³×¸ð »óÀÚ ¹è¿­</title>
+    <title>ï¿½ï¿½ï¿½ï¿½ ï¿½Ô·ï¿½</title>
 </head>
 <body>
 
-    <div class="container">
-        <!-- ³×¸ð »óÀÚ¸¦ 10°³ ¸¸µé¾î¼­ ¹èÄ¡ -->
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-    </div>
+    <label for="numberInput">ê°¯ìˆ˜ ìž…ë ¥:</label>
+    <input type="number" id="numberInput" name="numberInput">
 
 </body>
 </html>
